# aoc2019

./: AOC2019.ipynb  p1_input.txt
nbody/: CMakeLists.txt
nbody/src/: main.cpp
